# UWr

./: .gitignore  biblioteka.db  bufor.txt  library.db  score
02-11-22/: zad2.c  zad3maciek.c
19-10-22/: zad1.c
23-11-22/: tempCodeRunnerFile.c  zad1.c  zad2.c
26-10-22/: test3.txt  zad3.c  zad3Stys.c
9-11-22/: zad1.c
AISD/lista0/: zad2.c
AISD/zadania/: zad10l4.py  zad9l4.py
AN/: Numerical Analysis Template.xlsx
AN/Bezier/: README.md  bezierPaint.py  bezierTyper.py  dane.txt  gpt.py  interpol.py  out.txt  save.txt  save2.txt  snapshot.eps  utils.py
AN/Podpis/: compare.py  dane.txt  imgSep.py  interpolacja.py  podpis.trk  podpis.txt
AN/lista1/: zad2.c  zad3.c  zad4.c  zad6.c
AN/lista11/: zad.py
AN/lista12/: zad10.py  zad6.py
AN/lista2/: zad3.py  zad7.c  zad8.c  zad9a.c  zad9b.c
AN/lista3/: data1a.txt  data1b.txt  data1c.txt  zad1a.c  zad1b.c  zad1c.c  zad2.c  zad2H.c
AN/lista4/: data1a.txt  data5.txt  data6.txt  data7.txt  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c
AN/lista5/: regluaFalsi.ipynb  regluaFalsi.ipynb.txt
AN/lista6/: zad4.ipynb
AN/lista7/: lista7.ipynb
AN/lista8/: lista8.ipynb  nifs3.py
AN/lista9/: zad9.py
ASK/lista10/: zad1.md  zad2.md  zad3.md  zad4.md
ASK/lista11/: zad1.md  zad2.md  zad3.md  zad5.md  zad7.md
ASK/lista12/: zad1.md  zad2.c  zad2.md  zad3.md  zad4.md  zad5.md  zad6.md
ASK/lista13/: zad1.md  zad2.md  zad3.md  zad4.md  zad5.md  zad6.md  zad7.md
ASK/lista14/: zad1.md  zad2.md  zad3.md  zad4.md  zad9.md
ASK/lista2/: zad1.md  zad2.c  zad5.c  zad6.c  zad7.c  zad8.c
CUDA/: .clang-format  .clangd  .gitignore  compile_commands.json
EKONOMIA/: Zagadnienia.xlsx  definicje.md  definicje.txt
KiBK/: TPM_HSM_TEE_SGX.html  TPM_HSM_TEE_SGX.md  stream_ciphers.html  stream_ciphers.md
MIA/lista2/: a.py  (+2 more)
ML/: Assignment3.ipynb  Homework_4.ipynb  Homework_4.ipynb.txt
NEURAL/: main.py  pyproject.toml
PARO/memory-managment/exercises/: CMakeLists.txt  README_PL.md  example_leak.cpp  example_leak_array.cpp  example_leak_exception.cpp  example_leak_fds.cpp  example_leak_raii.cpp
PARO/memory-managment/exercises/resources/: CMakeLists.txt
PARO/memory-managment/exercises/resources/include/resources/: kernel.h  kernel_resource.h
PARO/memory-managment/exercises/resources/src/: kernel_resource.cpp  printers.h  printers_new.cpp  printers_old.cpp
PARO/memory-managment/exercises/resources/tests/: CMakeLists.txt  UniqueMock.hpp  test_kernel_resource.cpp
PARO/memory-managment/listings/: CMakeLists.txt
PARO/memory-managment/listings/allocations/: CMakeLists.txt  Heap.hpp  all_variable_types.cpp  buddy_deallocation_1.cpp  buddy_deallocation_2.cpp  buddy_demo.cpp  buddy_fragmentation.cpp  buddy_heap.cpp  new_delete.cpp  new_delete_array_integers.cpp  new_delete_array_pointers.cpp  new_delete_array_strings.cpp  stack_variables.cpp  stack_variables_object.cpp  variable_scopes.cpp  variable_scopes_invalid_access.cpp
PARO/memory-managment/listings/allocations/output/: variable_scopes.txt
PARO/memory-managment/listings/benchmarks/: CMakeLists.txt  make_shared.cpp  raw_ptr.cpp  shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
PARO/memory-managment/listings/functions/: CMakeLists.txt  function_cstring.cpp  function_cstring_fix.cpp  function_exit_points.cpp  function_invalid_scope.cpp  function_scope.cpp  function_try_catch.cpp
PARO/memory-managment/listings/paro/: CMakeLists.txt
PARO/memory-managment/listings/paro/include/paro/: Data.h  File.h  Integer.hpp  Object.hpp  Resource.h
PARO/memory-managment/listings/paro/src/: File.cpp  Integer.cpp  Object.cpp  Resource.cpp
PARO/memory-managment/listings/raii/: CMakeLists.txt  raii_cpp_initialization.cpp  raii_cstyle_initialization.cpp  raii_make_unique_cpp11.hpp  raii_make_unique_resource.cpp  raii_move_safe.cpp  raii_move_unsafe.cpp  raii_print_file_1.cpp  raii_print_file_2.cpp  raii_print_file_3.cpp  raii_resource_handler.cpp  raii_unique_ptr_deleter.cpp  raii_unique_ptr_deleter_file.cpp  raii_unique_ptr_deleter_malloc.cpp  raii_unique_ptr_ref_to_object.cpp  raii_unique_ptr_reference.cpp  raii_unique_ptr_resource.cpp  raii_unique_ptr_value.cpp
PARO/memory-managment/listings/raii/input/: DE_FINIBVS.txt
PARO/memory-managment/listings/raii/output/: raii_move_unsafe.txt
PARO/memory-managment/listings/ruleofzero/: CMakeLists.txt  example_assignment_operator.cpp  example_copy_ctor.cpp  example_only_destructor.cpp  example_only_destructor_nullcheck.cpp  example_ruleoffive.cpp  example_ruleofthree.cpp  example_ruleofzero.cpp
PARO/memory-managment/listings/shared_ptr/: CMakeLists.txt  shared_ptr_aliasing.cpp  shared_ptr_deleter.cpp  shared_ptr_function_call_leak.cpp  shared_ptr_function_call_no_leak.cpp  shared_ptr_resource.cpp  weak_ptr_cycle.cpp  weak_ptr_expired.cpp  weak_ptr_no_cycle.cpp
PARO/memory-managment/listings/shared_ptr/output/: weak_ptr_cycle.txt  weak_ptr_expired.txt  weak_ptr_no_cycle.txt
PARO/memory-managment/research/: CMakeLists.txt  README_PL.md  main.cpp
PARO/memory-managment/research/buddy_allocation/: CMakeLists.txt
PARO/memory-managment/research/buddy_allocation/include/buddy/: Heap.hpp
PARO/memory-managment/research/buddy_allocation/src/: Heap.cpp  get_free_list_index.cpp  heap_allocation.cpp  heap_deallocation.cpp  heap_print.cpp
PARO/memory-managment/research/buddy_allocation/tests/: CMakeLists.txt  tests_allocation.cpp  tests_deallocation.cpp
PARO/memory-managment/research/buddy_logger/: CMakeLists.txt
PARO/memory-managment/research/buddy_logger/include/: logger.hpp
PARO/memory-managment/research/buddy_logger/src/: logger.cpp
PARO/wspolrzedne/zadania/: CMakeLists.txt  Queue.hpp  argumenty_watku.cpp  obiad.cpp  podstawowa_synchronizacja.cpp  promise.cpp  przekazywanie_przez_kolejke.cpp  stworzenie_watku.cpp  wyjatki.cpp
RPIS/: punkty.xlsx
SO/: lista0.md
SW/: Makefile  compile_commands.json  compile_flags.txt
WDI/: .gitignore
lista 5/: test.c  zad2.c
lista 6/: Hanoi.py  zad1.c
lista4/: zadR.c
lista5/: chujcidodupy.c  test.c  zadM.c
lista6/: zadM.c
wdi/: tempCodeRunnerFile.c  zad3.c  zad4.c  zad5.c  zad7.c  zad8.c
(+1430 files in other folders)
